Sun Jan 18 11:49:46 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_invoke): avoid SEGV when VT_RECORD
	  variable is passed by reference. [ruby-dev:48803] [Bug #10697]

Sat Jan 17 23:59:15 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/psych/lib/psych/visitors/yaml_tree.rb (visit_String):
	  anchors like `\Z` are not valid inside character class.  use
	  negative-lookahead instead.
	  Fixes: https://github.com/tenderlove/psych/issues/221

Sat Jan 17 23:42:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: get rid of pattern substitution, which is not
	  supported by ash, and ash on NetBSD parses whole source first
	  and fails to start.  [ruby-dev:48823] [Bug #10750]

Fri Jan 16 18:42:58 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/redmine-backporter.rb: support adding related revisions
	  to issues.

Fri Jan 16 17:20:33 2015  Koichi Sasada  <ko1@atdot.net>

	vm.c, vm_core.h: constify VM_CF_LEP, VM_CF_PREV_EP, VM_CF_BLOCK_PTR
	and rb_vm_control_frame_block_ptr.

Fri Jan 16 15:41:21 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: bump version

	* ext/psych/psych.gemspec: ditto

Fri Jan 16 15:37:49 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: only dump hash
	  subclasses. Thanks Joe Eli McIlvain <joe.eli.mac@gmail.com>

	* test/psych/test_hash.rb: test for change

Fri Jan 16 15:35:21 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: bump version

	* ext/psych/lib/psych/visitors/yaml_tree.rb: fix line width wrapping
	  for long strings.  Thanks Jakub Jirutka <jakub@jirutka.cz>

	* test/psych/test_string.rb: test for change

Fri Jan 16 11:44:44 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* eval_intern.h, vm.c, vm_eval.c, vm_insnhelper.c:
	  change throw mechanism (not save target ep, but save target cfp).
	  It fixes `unexpected break' bug that occurs when
	  TracePoint#binding is called.